feat: add pagination to get all endpoints
