# api.yaml
@@ -7,6 +7,9 @@ paths:
   /letter:
     get:
       summary: "Get All Letters"
+      parameters:
+        - $ref: "#/components/parameters/LimitParameter"
+        - $ref: "#/components/parameters/LastEvaluatedKeyParameter"
       responses:
         200:
           description: "Get All Letters Success"
@@ -19,6 +22,8 @@ paths:
                     type: "array"
                     items:
                       $ref: "#/components/schemas/LetterResponse"
+                  lastEvaluatedKey:
+                    $ref: "#/components/schemas/LastEvaluatedKey"
         500:
           description: "Internal Server Error"
           content:
@@ -199,6 +204,9 @@ paths:
   /recipient:
     get:
       summary: "Get All Recipients"
+      parameters:
+        - $ref: "#/components/parameters/LimitParameter"
+        - $ref: "#/components/parameters/LastEvaluatedKeyParameter"
       responses:
         200:
           description: "Get All Recipients Success"
@@ -211,6 +219,8 @@ paths:
                     type: "array"
                     items:
                       $ref: "#/components/schemas/RecipientResponse"
+                  lastEvaluatedKey:
+                    $ref: "#/components/schemas/LastEvaluatedKey"
         500:
           description: "Internal Server Error"
           content:
@@ -385,6 +395,9 @@ paths:
   /correspondence:
     get:
       summary: "Get All Correspondences"
+      parameters:
+        - $ref: "#/components/parameters/LimitParameter"
+        - $ref: "#/components/parameters/LastEvaluatedKeyParameter"
       responses:
         200:
           description: "Get All Correspondences Success"
@@ -397,6 +410,8 @@ paths:
                     type: "array"
                     items:
                       $ref: "#/components/schemas/CorrespondenceResponse"
+                  lastEvaluatedKey:
+                    $ref: "#/components/schemas/LastEvaluatedKey"
         500:
           description: "Internal Server Error"
           content:
@@ -575,6 +590,23 @@ paths:
               schema:
                 $ref: "#/components/schemas/InternalServerError"
 components:
+  parameters:
+    LimitParameter:
+      name: "limit"
+      in: "query"
+      description: "The maximum number of letters to return"
+      required: false
+      schema:
+        type: "integer"
+        example: 50
+    LastEvaluatedKeyParameter:
+      name: "lastEvaluatedKey"
+      in: "query"
+      description: "The last evaluated key from the previous query for pagination"
+      required: false
+      schema:
+        type: "string"
+        example: "8f5d8f0d-8697-4124-a4c8-7d3af09fc102"
   schemas:
     Address:
       type: "object"
@@ -642,6 +674,10 @@ components:
         - "LOW"
         - "MEDIUM"
         - "HIGH"
+    LastEvaluatedKey:
+      type: "string"
+      description: "The last evaluated key to be used for pagination"
+      example: "8f5d8f0d-8697-4124-a4c8-7d3af09fc102"
     LastName:
       type: "string"
       example: "Aldrich"
